# ANNS_FHE

./: .gitignore  README.md  config.json  config_manager.py  data_loader.py  encoder.py  ivf_quantizer.py  main.py  preprocessor.py  product_quantizer.py  searcher.py  serialize_models.py
cpp_host_model/: .gitignore
software_golden_model/: analyze_results.py  config.json  config_manager.py  data_loader.py  encoder.py  fhe_wrapper.py  ivf_quantizer.py  main.py  preprocessor.py  product_quantizer.py  requirements.txt  run_experiments.py  run_fhe_benchmarks.py  searcher.py  serialize_models.py
software_golden_model/fhe_core/: CMakeLists.txt  fhe_config.cpp  fhe_config.h  fhe_context_manager.cpp  fhe_context_manager.h  fhe_searcher.cpp  fhe_searcher.h  main.cpp  plaintext_searcher.cpp  plaintext_searcher.h  sign_approximator.cpp  sign_approximator.h  thread_pool.h
